[package]
name = "swissbit-tse"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"

[target.'cfg(windows)'.dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
]

[target.'cfg(linux)'.dependencies.libc]
version = "0.2.139"
