[package]
name = "swissbit-tse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

[features]
server = ["dep:clap", "dep:rouille", "dep:base64", "dep:serde"]

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.1.1", features = ["derive"], optional = true }
rouille = { version = "3.6.1", optional = true }
base64 = { version = "0.21.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
maligned = "0.2.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.44.0", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.139"
